apps/base/swpt-creditors/trade/worker/http-fetcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-worker-http-fetcher
  labels:
    app.kubernetes.io/component: http-fetcher
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: http-fetcher
  template:
    metadata:
      labels:
        app.kubernetes.io/component: http-fetcher
        log.pipeline: swpt-python-logging
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: http-fetcher
            topologyKey: kubernetes.io/hostname
            matchLabelKeys:
            - pod-template-hash
      priorityClassName: shard-background-worker
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: http-fetcher
          image: swpt-trade
          args: ['fetch_debtor_infos']
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
