apps/base/swpt-creditors/trade/worker/internal-messages-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-worker-internal-messages-consumer
  labels:
    app.kubernetes.io/component: internal-messages-consumer
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: internal-messages-consumer
  template:
    metadata:
      labels:
        app.kubernetes.io/component: internal-messages-consumer
        log.pipeline: swpt-python-logging
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: internal-messages-consumer
            topologyKey: kubernetes.io/hostname
            matchLabelKeys:
            - pod-template-hash
      priorityClassName: shard-smp-consumer
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: internal-messages-consumer
          image: swpt-trade
          args: ['consume_internal_messages']
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
