apps/base/swpt-creditors/trade/worker/internal-messages-drainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-worker-internal-messages-drainer
  labels:
    app.kubernetes.io/component: internal-messages-drainer
spec:
  replicas: 0  # Must be zero, unless the shard is being split.
  selector:
    matchLabels:
      app.kubernetes.io/component: internal-messages-drainer
  template:
    metadata:
      labels:
        app.kubernetes.io/component: internal-messages-drainer
        log.pipeline: swpt-python-logging
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: internal-messages-drainer
            topologyKey: kubernetes.io/hostname
            matchLabelKeys:
            - pod-template-hash
      priorityClassName: shard-smp-consumer
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: internal-messages-drainer
          image: swpt-trade
          args: ['consume_internal_messages', '--draining-mode']
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
