apps/base/swpt-creditors/trade/worker/transfers-triggerer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-worker-transfers-triggerer
  labels:
    app.kubernetes.io/component: transfers-triggerer
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: transfers-triggerer
  template:
    metadata:
      labels:
        app.kubernetes.io/component: transfers-triggerer
        log.pipeline: swpt-python-logging
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: transfers-triggerer
            topologyKey: kubernetes.io/hostname
            matchLabelKeys:
            - pod-template-hash
      priorityClassName: shard-background-worker
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: transfers-triggerer
          image: swpt-trade
          args: ['trigger_transfers']
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
