apps/base/swpt-creditors/trade/worker/turn-roller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-worker-turn-roller
  labels:
    app.kubernetes.io/component: turn-roller
spec:
  replicas: 1  # Must be 1, unless the shard is being split (then it must be 0)!
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: turn-roller
  template:
    metadata:
      labels:
        app.kubernetes.io/component: turn-roller
        log.pipeline: swpt-python-logging
    spec:
      priorityClassName: shard-background-worker
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: turn-roller
          image: swpt-trade
          args: ['worker']
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
