apps/base/swpt-creditors/trade/worker/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-trade-worker-db
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels: {}
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: postgres-operator
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: monitoring
